packages/yew-router-macro/tests/routable_derive/old-param-syntax-fail.stderr
error: route segments must not start with `:`. Use `{id}` to capture a parameter.
 --> tests/routable_derive/old-param-syntax-fail.rs:5:10
  |
5 |     #[at("/posts/:id")]
  |          ^^^^^^^^^^^^
